# colab-gsoc2020-Shreyas_Gokhale

./: .gitignore  README.md  docker-compose.yaml  requirements.txt  start_exercise.sh
ament_workspace/src/amazon_robot_bt/: CMakeLists.txt  package.xml
ament_workspace/src/amazon_robot_bt/behavior_trees_xml/: move.xml  transport.xml
ament_workspace/src/amazon_robot_bt/config/: params.yaml
ament_workspace/src/amazon_robot_bt/include/amazon_robot_bt/: LoadPallet.hpp  Move.hpp
ament_workspace/src/amazon_robot_bt/launch/: amazon_robot_bt_example_launch.py
ament_workspace/src/amazon_robot_bt/src/: nav2_sim_node.cpp
ament_workspace/src/amazon_robot_bt/src/behavior_tree_nodes/: LoadPallet.cpp  Move.cpp
ament_workspace/src/amazon_robot_controller/: CMakeLists.txt  package.xml
ament_workspace/src/amazon_robot_description/: package.xml
ament_workspace/src/amazon_robot_msg/: CMakeLists.txt  package.xml
catkin_workspace/src/amazon_robot_gazebo/: package.xml
development/: model.sdf
development/amazon_exercise_dep/: CMakeLists.txt  carVizReal.yml  config.hpp  main.cpp  package.xml
development/amazon_exercise_dep/comm/: cameraClient.hpp  laserClient.hpp  (+2 more)
docker/: Dockerfile-jderobot-academy  Dockerfile-ros-noetic  README.md  ros_entrypoint.sh
docs/: README.md  _config.yml  about.md  browserconfig.xml  tags.md
docs/_data/: menus.yml
docs/_includes/: author.html  footer.html  header.html
docs/_layouts/: home.html  post.html
docs/_site/: 404.html  and-we-have-a-liftoff.html  back-to-the-start.html  beginning-of-gsoc-journey.html  behaviour-trees.html  community-bonding-1.html  community-bonding-2.html  connecting-the-dots.html  feed.xml  final-report.html  finding-the-way.html  index.html  jde-multibot.html  launch-off.html  lets-start-cmaking.html  level-2.html  new-stuff.html  phase-one-report.html  phase-three-report.html  phase-two-report.html  robots.txt  sitemap.xml  two-x.html
exercises/: README.md  requirements-slim.in  requirements-slim.txt  requirements.txt
exercises/amazon_warehouse/: MyAlgorithm.py  amazonConf.yml  amazonWarehouse.py
exercises/global_navigation/: AStar.py  MyAlgorithm.py
global_navigation/: AStar.py  MyAlgorithm.py  README.md
global_navigation/sensors/: destiny.txt  grid.py
(+107 files in other folders)
